--- a/100API.ipynb
+++ b/100API.ipynb
@@ -221,22 +221,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'input_source_hash': 'QmZyuS3R4k9RqPQQcVUTTHNmqZuRjyLygM72rdNYtYcQd6'}\n",
+      "{'input_source_hash': 'QmZyuS3R4k9RqPQQcVUTTHNmqZuRjyLygM72rdNYtYcQd6', 'lang': 'eng'}\n",
       "{'data': \"name 'os' is not defined\", 'status': 'error'}\n"
      ]
     }
    ],
    "source": [
     "#CV006\n",
+    "# QmZyuS3R4k9RqPQQcVUTTHNmqZuRjyLygM72rdNYtYcQd6\n",
+    "\n",
+    "QmekXZPCVQcdeZsZiHrzjF2jxahWkktavV735DCvpxbVPj\n",
     "url = 'https://100api.orai.dev/cv006'\n",
-    "data = {'input_source_hash': 'QmZyuS3R4k9RqPQQcVUTTHNmqZuRjyLygM72rdNYtYcQd6',\n",
+    "data = {'input_source_hash': '',\n",
     "        'lang':'eng'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
