--- a/100API.ipynb
+++ b/100API.ipynb
@@ -258,8 +258,8 @@
     "#CV007\n",
     "\n",
     "url = 'https://100api.orai.dev/cv007'\n",
-    "data = {'input_source_hash': 'QmekXZPCVQcdeZsZiHrzjF2jxahWkktavV735DCvpxbVPj',\n",
-    "        'lang':'eng'}\n",
+    "data = {'input_source_hash': 'QmZcmLZdMShfEMyV5Z7wpSUyYmJLYMKLMWm9NEVNjSAiz4',\n",
+    "        'input_ref_hash':'eng'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
