--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'obama.png',\n",
-       " 'Hash': 'QmZcmLZdMShfEMyV5Z7wpSUyYmJLYMKLMWm9NEVNjSAiz4',\n",
-       " 'Size': '194513'}"
+       "{'Name': 'kim.png',\n",
+       " 'Hash': 'QmPoXoBmDdkBeKUGWwGGCykPHVtfspWmFUWyd8T6VzAfJV',\n",
+       " 'Size': '20104'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./kim.png','rb')}\n",
+    "files = {'file': open('./obama.png','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
