--- a/100API.ipynb
+++ b/100API.ipynb
@@ -304,8 +304,7 @@
     "#CV007\n",
     "\n",
     "url = 'https://100api.orai.dev/cv007'\n",
-    "data = {'input_source_hash': 'QmZcmLZdMShfEMyV5Z7wpSUyYmJLYMKLMWm9NEVNjSAiz4',\n",
-    "        'input_ref_hash':'QmPoXoBmDdkBeKUGWwGGCykPHVtfspWmFUWyd8T6VzAfJV'}\n",
+    "data = {'input_source_hash': 'QmRV4JwvohUjzsW9x8Y8kdxiQdLLZvQqr6iy5jzbVWzUBQ'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
