--- a/100API.ipynb
+++ b/100API.ipynb
@@ -324,25 +324,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'input_source_hash': 'QmRV4JwvohUjzsW9x8Y8kdxiQdLLZvQqr6iy5jzbVWzUBQ'}\n",
-      "{'data': [{'label': 'castle', 'score': 65.26073455810547}, {'label': 'palace', 'score': 10.183137893676758}, {'label': 'mosque', 'score': 8.16793441772461}, {'label': 'church', 'score': 7.302755832672119}, {'label': 'stupa', 'score': 1.5817433595657349}], 'status': 'success'}\n"
+      "{'input_source_hash': 'QmZFCiE5qCN9EAHyu7a8V3emrRgD9siFuj7sSj5k96Dt51'}\n",
+      "{'data': 'cannot identify image file <_io.BytesIO object at 0x7fe40c14c130>', 'status': 'error'}\n"
      ]
     }
    ],
    "source": [
     "#CV009\n",
     "\n",
-    "#QmRV4JwvohUjzsW9x8Y8kdxiQdLLZvQqr6iy5jzbVWzUBQ\n",
-    "\n",
     "url = 'https://100api.orai.dev/cv009'\n",
-    "data = {'input_source_hash': 'QmZFCiE5qCN9EAHyu7a8V3emrRgD9siFuj7sSj5k96Dt51'}\n",
+    "data = {'input_source_hash': 'QmRV4JwvohUjzsW9x8Y8kdxiQdLLZvQqr6iy5jzbVWzUBQ'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
