--- a/100API.ipynb
+++ b/100API.ipynb
@@ -351,11 +351,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmRFw3YZhvx6F4VZr7AyJXcrnKDoZCrystWG72wRaGPpgN'}\n",
+      "{'data': [{'label': 'garden phlox', 'score': 99}], 'status': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV010\n",
+    "\n",
+    "url = 'https://100api.orai.dev/cv010'\n",
+    "data = {'input_source_hash': 'QmRFw3YZhvx6F4VZr7AyJXcrnKDoZCrystWG72wRaGPpgN'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV010\n",
+    "#CV011\n",
     "\n",
     "url = 'https://100api.orai.dev/cv010'\n",
     "data = {'input_source_hash': 'QmRFw3YZhvx6F4VZr7AyJXcrnKDoZCrystWG72wRaGPpgN'}\n",
