--- a/100API.ipynb
+++ b/100API.ipynb
@@ -412,7 +412,8 @@
     "#CV012\n",
     "\n",
     "url = 'https://100api.orai.dev/cv012'\n",
-    "data = {'input_source_hash': 'QmU6F8uP65entJxU9BoQE6pMmE3EfmhK2Rooq4DdFK4ms8'}\n",
+    "data = {'input_source_hash': 'QmU6F8uP65entJxU9BoQE6pMmE3EfmhK2Rooq4DdFK4ms8',\n",
+    "        'mask_img_hash':'QmS2VbpTzT4P4vYcm3dZH8JHsDd47xA7Lks4ncYHtsTdrn'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
