--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'noise.png',\n",
-       " 'Hash': 'QmS2VbpTzT4P4vYcm3dZH8JHsDd47xA7Lks4ncYHtsTdrn',\n",
-       " 'Size': '20360'}"
+       "{'Name': 'nnhk.png',\n",
+       " 'Hash': 'QmPu57nyGX2ty7cAgnEZZyqNNJ6FTMQcUY8KRBN2fP1ai2',\n",
+       " 'Size': '23391'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./nnhk.png','rb')}\n",
+    "files = {'file': open('./city.png','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
