--- a/100API.ipynb
+++ b/100API.ipynb
@@ -461,14 +461,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmPu57nyGX2ty7cAgnEZZyqNNJ6FTMQcUY8KRBN2fP1ai2'}\n",
+      "{'data': {'prediction': 'space', 'probability': '0.7877'}, 'status': 'success'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV014\n",
     "\n",
     "url = 'https://100api.orai.dev/cv014'\n",
     "data = {'input_source_hash': 'QmPu57nyGX2ty7cAgnEZZyqNNJ6FTMQcUY8KRBN2fP1ai2'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CV015\n",
+    "\n",
+    "url = 'https://100api.orai.dev/cv015'\n",
+    "data = {'input_source_hash': 'QmVvt8t6BCJhxCuAaq6PCzspAXJfDiDtoRPkqza6CGP8Y1'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
