--- a/100API.ipynb
+++ b/100API.ipynb
@@ -80,7 +80,7 @@
     "#CV002\n",
     "url = 'https://100api.orai.dev/cv002'\n",
     "data = {'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
-    "headers = {\n",
+    "headers = { \n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, data=data, headers=headers)\n",
@@ -488,9 +488,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmVvt8t6BCJhxCuAaq6PCzspAXJfDiDtoRPkqza6CGP8Y1'}\n",
+      "{'data': \"Command './darknet detector test cfg/coco.data cfg/yolov4-tiny.cfg yolov4-tiny.weights /tmp/cv015_input_1661769607.682496.jpg -dont_show -ext_output ' returned non-zero exit status 127.\", 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV015\n",
     "\n",
@@ -503,6 +512,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
