--- a/main.ipynb
+++ b/main.ipynb
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'nnhk.png',\n",
-       " 'Hash': 'QmPu57nyGX2ty7cAgnEZZyqNNJ6FTMQcUY8KRBN2fP1ai2',\n",
-       " 'Size': '23391'}"
+       "{'Name': 'city.png',\n",
+       " 'Hash': 'QmVvt8t6BCJhxCuAaq6PCzspAXJfDiDtoRPkqza6CGP8Y1',\n",
+       " 'Size': '12170'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
