--- a/100API.ipynb
+++ b/100API.ipynb
@@ -542,13 +542,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmcJMgBv9s3hDu9K9wNf1SJVSpueyivRqU2L3w8mtZ1xFM'}\n",
+      "{'data': {'bounding_box': [], 'output_image': None}, 'status': 'success'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV017\n",
     "\n",
     "url = 'https://100api.orai.dev/cv017'\n",
+    "data = {'input_source_hash': 'QmcJMgBv9s3hDu9K9wNf1SJVSpueyivRqU2L3w8mtZ1xFM'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CV018\n",
+    "\n",
+    "url = 'https://100api.orai.dev/cv018'\n",
     "data = {'input_source_hash': 'QmcJMgBv9s3hDu9K9wNf1SJVSpueyivRqU2L3w8mtZ1xFM'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
