--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'bbgt.png',\n",
-       " 'Hash': 'QmcJMgBv9s3hDu9K9wNf1SJVSpueyivRqU2L3w8mtZ1xFM',\n",
-       " 'Size': '33610'}"
+       "{'Name': '1.png',\n",
+       " 'Hash': 'Qmd5sAc8rHTgDzgqaKyWDiyNvJP94JErwtaHZFxRKSb3CA',\n",
+       " 'Size': '92270'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./bbgt.png','rb')}\n",
+    "files = {'file': open('./1.png','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
