--- a/100API.ipynb
+++ b/100API.ipynb
@@ -569,9 +569,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmbedBrmtwo6VPZxVExymdH6d3qawDqRh9UsdZgtNENTAS'}\n",
+      "{'Hash': 'QmdVDgB5zZp6YoDwRC4KHkaSpbiF3jz6QH1XXdiF8tKUvN', 'Name': 'file', 'Size': '8927'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV018\n",
     "\n",
