--- a/100API.ipynb
+++ b/100API.ipynb
@@ -596,9 +596,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmU6h69HavNH1CJas4FVtHREiVP7QPvDdAZ3dpr7oyDHSA'}\n",
+      "{'data': 'empty range for randrange() (0, 0, 0)', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV020\n",
     "url = 'https://100api.orai.dev/cv020'\n",
@@ -610,6 +619,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
