--- a/100API.ipynb
+++ b/100API.ipynb
@@ -628,7 +628,9 @@
    "source": [
     "#CV021\n",
     "url = 'https://100api.orai.dev/cv021'\n",
-    "data = {'input_source_hash': 'QmU6h69HavNH1CJas4FVtHREiVP7QPvDdAZ3dpr7oyDHSA'}\n",
+    "data = {'input_source_hash': 'QmU6h69HavNH1CJas4FVtHREiVP7QPvDdAZ3dpr7oyDHSA',\n",
+    "        'iterations': 2,\n",
+    "        'num_octaves': 5}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
