--- a/100API.ipynb
+++ b/100API.ipynb
@@ -668,12 +668,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmU782k1ScVwtzFwD86Eq4KiGoh5xtnjXuC4CmMznBGVw6'}\n",
+      "{'data': 'empty range for randrange() (0, 0, 0)', 'status': 'error'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV022\n",
+    "url = 'https://100api.orai.dev/cv022'\n",
+    "data = {'input_source_hash': 'QmU782k1ScVwtzFwD86Eq4KiGoh5xtnjXuC4CmMznBGVw6'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV022\n",
-    "url = 'https://100api.orai.dev/cv022'\n",
+    "#CV023\n",
+    "url = 'https://100api.orai.dev/cv023'\n",
     "data = {'input_source_hash': 'QmU782k1ScVwtzFwD86Eq4KiGoh5xtnjXuC4CmMznBGVw6'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
