--- a/100API.ipynb
+++ b/100API.ipynb
@@ -700,7 +700,7 @@
    "source": [
     "#CV023\n",
     "url = 'https://100api.orai.dev/cv023'\n",
-    "data = {'input_source_hash': 'QmU782k1ScVwtzFwD86Eq4KiGoh5xtnjXuC4CmMznBGVw6'}\n",
+    "data = {''}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
