--- a/100API.ipynb
+++ b/100API.ipynb
@@ -720,9 +720,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'Hash': 'QmazTomrUNFfaHoNVyCz5NKPQoqSQvLXKfgkYQVzPE44EN', 'Name': 'file', 'Size': '2158'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV024\n",
     "url = 'https://100api.orai.dev/cv024'\n",
@@ -734,6 +743,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
