--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'hanoi.jpeg',\n",
-       " 'Hash': 'QmU782k1ScVwtzFwD86Eq4KiGoh5xtnjXuC4CmMznBGVw6',\n",
-       " 'Size': '97083'}"
+       "{'Name': 'st.jpeg',\n",
+       " 'Hash': 'QmbyhZfG1LYyMdCbuZTGpRQzd1rpfJUYLWhsKG8BaZDzoi',\n",
+       " 'Size': '233595'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./hanoi.jpeg','rb')}\n",
+    "files = {'file': open('./st.jpeg','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
