--- a/100API.ipynb
+++ b/100API.ipynb
@@ -746,9 +746,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmbyhZfG1LYyMdCbuZTGpRQzd1rpfJUYLWhsKG8BaZDzoi'}\n",
+      "{'Hash': 'Qmf1BEUuTJh9JkbCDpF6dHNFhV3Kv3Lqr38EpKunj86ZMo', 'Name': 'file', 'Size': '16880'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV026\n",
     "url = 'https://100api.orai.dev/cv026'\n",
@@ -760,6 +769,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
