--- a/100API.ipynb
+++ b/100API.ipynb
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
     "    }\n",
     "response = requests.post(url, data=data, headers=headers)\n",
     "print(data)\n",
-    "print(response.json())"
+    "print(response)"
    ]
   },
   {
