--- a/100API.ipynb
+++ b/100API.ipynb
@@ -774,7 +774,16 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'Qmf6aMDqz7hkGuxsfRhKnpw6R8M8jen44ZgqVfrdS9uhaA'}\n",
+      "<Response [502]>\n"
+     ]
+    }
+   ],
    "source": [
     "#CV027\n",
     "url = 'https://100api.orai.dev/cv027'\n",
@@ -784,7 +793,7 @@
     "    }\n",
     "response = requests.post(url, data=data, headers=headers)\n",
     "print(data)\n",
-    "print(response)"
+    "print(response.json())"
    ]
   },
   {
